<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IT Sammlung</string>
    <string name="museum_name">Bezeichnung:</string>
    <string name="museum_name_content">Regensburger Sammlung der Informationstechnik im Alten Finanzamt (ReSI im AlFi)</string>
    <string name="museum_leader">Leitung:</string>
    <string name="museum_leader_content">Prof. Dr. Ludwig Hitzenberger, Universität Regensburg</string>
    <string name="museum_topics">Sammlungsschwerpunkte:</string>
    <string name="museum_topics_content">Informatik • Informationstechnik • Technik • Technikgeschichte</string>
    <string name="museum_adress">Adresse:</string>
    <string name="museum_adress_content">Lehrstuhl für Informationswissenschaft\nUniversität Regensburg\nUniversitätsstr. 31\n93053 Regensburg</string>
    <string name="museum_location">Standort:</string>
    <string name="museum_location_content">Altes Finanzamt\nLandshuter Str. 4\n93047 Regensburg</string>
    <string name="museum_contact">Kontakt:</string>       
    <string name="museum_contact_content">Sabrina Lang\n(sabrina.lang@stud.uni-regensburg.de)</string>  
    <string name="museum_goto"><u>Anfahrt</u></string>   
    <string name="museum_startAR">Starte AR</string>  
    <string name="breadcrumbs_main">Home</string>  
    <string name="breadcrumbs_scan">Scan</string> 
    <string name="breadcrumbs_detail">Detail</string>
    <string name="breadcrumbs_help">Help</string>
    <string name="help_text1">Mit Hilfe dieser App sollen einige ausgewählte Ausstellungsstücke der Regensburger IT-Sammlung augmentiert werden, das heißt die Realität soll digital erweitert werden.</string>
    <string name="help_text2">Augmentiert werden relevante Informationsmaterial zu einzelnen Objekten, sobald diese von der Kamera des Smartphones erfasst werden. Anhand dieses weiterführenden Daten sollen die informationstechnischen Antiquitäten in Szene gesetzt werden, sodass das Interesse der Museumsbesucher steigt.</string>
    <string name="detail_date">erschienen </string> 
    <string name="detail_company">von </string>
    <string name="detail_description">Beschreibung: </string>
    <string name="detail_os">Betriebssystem: </string>  
    <string name="detail_memory">Hauptspeicher: </string>
    <string name="detail_ram">Arbeitsspeicher: </string>  
    <string name="detail_cpu">Prozessor: </string>  
    <string name="detail_special">Besonderheiten: </string>
    
    <string name="detailcomp_type">Typ: </string>  
    <string name="detailcomp_freq">Taktzahl: </string>
    <string name="detailcomp_memory">Speicher RAM: </string>  
    <string name="detailcomp_cpu">Prozessor: </string>  
    <string name="detailcomp_register">Register: </string>
    <string name="detailcomp_interfaces">Schnittstellen: </string>
    
    <string name="scan_storages_earlier">Früher:</string>  
    <string name="scan_storages_later">Später:</string>
    <string name="scan_storages_date">erschienen </string> 
    <string name="scan_storages_developer">entwickelt von </string>
    <string name="scan_storages_type">Typ: </string>
    <string name="scan_storages_capacity">Kapazität: </string>
    <string name="scan_storages_material">Material: </string>
    <string name="scan_storages_endurance">Lebensdauer: </string>
    <string name="scan_storages_size">Größe: </string>
    
    <string name="scan_timeline_default_date_1">1950</string>
    <string name="scan_timeline_default_date_2">1960</string>
    <string name="scan_timeline_default_date_3">1970</string>
    <string name="scan_timeline_default_date_4">1980</string>
</resources>
