<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="72px"
        android:background="#9C004B" >
        
       <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignRight="@+id/verticalLine"
            android:layout_toRightOf="@+id/logoUR"
            android:gravity="center_vertical|left"
            android:paddingLeft="30dp"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shortDetail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/verticalLine"
            android:gravity="center_vertical|right"
            android:paddingRight="18dp"
            android:text="@string/breadcrumbs_detail"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/verticalLine"
            android:layout_width="2px"
            android:layout_height="46px"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="12px"
            android:background="#444444" />

        <ImageView
            android:id="@+id/logoUR"
            android:layout_width="72px"
            android:layout_height="72px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ur_logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444444" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_name"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_named"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="47dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_date"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_dated"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_comp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_company"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_company"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="48dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
       
        <TextView
            android:id="@+id/textView_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/detail_description"
            android:textSize="15dp"
	        android:textColor="#fff" />
        
        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:textSize="12dp"
	        android:textColor="#fff" />
        
        <ImageView
            android:id="@+id/imageView_pic"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_os"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_os"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_os_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_memory"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_memory"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_memory_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_ram"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_ram"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_ram_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_cpu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_cpu"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_cpu_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
	    android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/textView_special"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detail_special"
	            android:textSize="15dp"
	            android:textColor="#fff" />

	        <TextView
	            android:id="@+id/textView_special_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textStyle="bold"
	            android:textSize="15dp"
	            android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>
    
    
    </ScrollView>

</LinearLayout>
